--- a/src/pages/singlePage.scss
+++ b/src/pages/singlePage.scss
@@ -85,3 +85,19 @@
         display: block;
     }
 }
+
+@media(min-width: 768px) {
+    .singlePage {
+        &__finish {
+            &-img {
+                img {
+                    width: 20%;
+                }
+            }
+
+            &-btn {
+                width: 30%;
+            }
+        }
+    }
+}
